--- a/index.html
+++ b/index.html
@@ -16,27 +16,27 @@ TODO: Opengraph meta data to make things look nice when finished
 
 <head>
     <meta charset="UTF-8">
-    <title>Inter-Dimensional Cable</title>
+    <title>Doggie Tv</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <script src="js/get-video.js"></script>
     <link rel="stylesheet" href="https://necolas.github.io/normalize.css/3.0.2/normalize.css">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=PT+Mono" rel="stylesheet" type="text/css">
-    <meta property="og:title" content="Inter-Dimensional Cable" />
+    <meta property="og:title" content="Doggie Tv" />
     <meta property="og:type" content="website" />
-    <meta name="description" content="A non-stop stream of intergalactic content from /r/InterdimensionalCable straight to your eyeholes." />
-    <meta property="og:description" content="A non-stop stream of intergalactic content from /r/InterdimensionalCable straight to your eyeholes." />
-    <meta property="og:url" content="http://inter-dimensionalcable.xyz" />
-    <meta property="og:image" content="http://inter-dimensionalcable.xyz/images/opengraph.png" />
-    <meta property="og:image:width" content="499" />
-    <meta property="og:image:height" content="279" />
+    <meta name="description" content="Come watch some doggies watch videos of doggies" />
+    <meta property="og:description" content="Come watch some doggies watch videos of doggies" />
+    <meta property="og:url" content="http://doggie-tv.website" />
+    <meta property="og:image" content="http://doggie-tv.website/images/opengraph.png" />
+    <meta property="og:image:width" content="2410" />
+    <meta property="og:image:height" content="1464" />
     <!--  Twitter Cards  -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:site" content="@MrMcPowned">
-    <meta name="twitter:creator" content="@MrMcPowned">
-    <meta name="twitter:title" content="Inter-Dimensional Cable">
-    <meta name="twitter:description" content="A non-stop stream of intergalactic content from /r/InterdimensionalCable straight to your eyeholes.">
-    <meta name="twitter:image" content="http://inter-dimensionalcable.xyz/images/opengraph.png">
+    <meta name="twitter:site" content="@charliegrc">
+    <meta name="twitter:creator" content="@charliegrc">
+    <meta name="twitter:title" content="Doggie Tv">
+    <meta name="twitter:description" content="Come watch some doggies watch videos of doggies">
+    <meta name="twitter:image" content="http://doggie-tv.website/images/opengraph.png">
     <link rel="shortcut icon" href="favicon.png">
 </head>
 
